--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: node_js
 sudo: false
 node_js:
+  - "14"
+  - "12"
   - "10"
   - "8"
   - "6"
   - "11"
+  
+arch:
+  - amd64
+  - ppc64le
+  
 notifications:
   email: false
 cache:
